feat: Add message navigation and styling
Introduces buttons to navigate between messages and updates styling for a better user experience. This change allows users to cycle through messages without closing and reopening the overlay.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
                 <div class="scroll-content">
                     <p id="msg-text">Mensaje...</p>
                 </div>
-                <button id="btn-close" class="btn-secondary">Cerrar</button>
+                
+                <!-- Navigation Controls -->
+                <div class="nav-controls">
+                    <button id="btn-prev" class="btn-nav" aria-label="Anterior">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
+                    </button>
+                    <button id="btn-close" class="btn-secondary">Cerrar</button>
+                    <button id="btn-next" class="btn-nav" aria-label="Siguiente">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                    </button>
+                </div>
             </div>
         </section>
 
