feat: Enhance user experience and messaging
Refine UI elements, improve interaction hints, and enrich content for a more heartfelt user experience. Adjust performance settings for mobile devices and add new messages.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="intro-panel" class="panel visible">
             <h1 class="title">Un cielo lleno de vos</h1>
             <p class="subtitle">Mensajes de todo el equipo para vos, Sandra.</p>
-            <p class="instruction">Te enviamos toda nuestra energía a través de este cielo.</p>
+            <p class="instruction">Te enviamos toda nuestra fuerza y energía positiva a través de este cielo.</p>
             <button id="btn-open" class="btn-primary">Abrir el cielo</button>
         </section>
 
@@ -66,7 +66,7 @@
 
         <!-- Small hint for interaction -->
         <div id="interaction-hint" class="hint hidden">
-            Tocá una estrella para leer un mensaje
+            Tocá una estrella para leer un mensaje.
         </div>
     </div>
 
