feat: Update intro screen and messages subtitle
Reflects a more unified and encouraging message for Sandra, emphasizing collective support.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <!-- Intro Screen -->
         <section id="intro-panel" class="panel visible">
             <h1 class="title">Un cielo lleno de vos</h1>
-            <p class="subtitle">Mensajes de todo el equipo para vos, Sandra.</p>
-            <p class="instruction">Te enviamos toda nuestra fuerza y energía positiva a través de este cielo.</p>
-            <button id="btn-open" class="btn-primary">Abrir el cielo</button>
+            <p class="subtitle">¡¡¡TODOS CONTIGO!!!</p>
+            <p class="instruction"></p>
+            <button id="btn-open" class="btn-primary">¿Quieres ver más?</button>
         </section>
 
         <!-- Message Overlay (Hidden by default) -->
