feat: Improve intro and optimize particles
Refine intro screen text and adjust background particle count for mobile devices.

This change updates the main title and instruction text on the intro panel for better clarity and emotional impact. It also optimizes performance on mobile by reducing the number of background particles displayed, ensuring a smoother user experience. Additionally, accessibility attributes are added to the message overlay.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         
         <!-- Intro Screen -->
         <section id="intro-panel" class="panel visible">
-            <h1 class="title">Un cielo lleno de vos</h1>
-            <p class="subtitle">¡¡¡TODOS CONTIGO!!!</p>
-            <p class="instruction"></p>
+            <h1 class="title">¡¡¡TODOS CONTIGO!!!</h1>
+            <p class="subtitle"></p>
+            <p class="instruction">Te enviamos toda nuestra fuerza y energía positiva a través de este cielo.</p>
             <button id="btn-open" class="btn-primary">¿Quieres ver más?</button>
         </section>
 
         <!-- Message Overlay (Hidden by default) -->
-        <section id="message-overlay" class="overlay hidden">
+        <section id="message-overlay" class="overlay hidden" role="dialog" aria-modal="true" aria-labelledby="msg-name" aria-describedby="msg-text">
             <div class="card">
                 <h2 id="msg-name">Nombre</h2>
                 <div class="scroll-content">
