--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="intro-panel" class="panel visible">
             <h1 class="title">¡¡¡TODOS CONTIGO!!!</h1>
             <p class="subtitle"></p>
-            <p class="instruction">Te enviamos toda nuestra fuerza y energía positiva a través de este cielo.</p>
+            <p class="instruction"></p>
             <button id="btn-open" class="btn-primary">¿Quieres ver más?</button>
         </section>
 
